# simple-rtos

./: CMakeLists.txt  readme.org  rtos.c
bare-metal/: CMakeLists.txt  Makefile  Makefile.test  kernel.ld
bare-metal/app/: main.c
bare-metal/arch/: context_switch.s  startup.s  vectors.s
bare-metal/drivers/: timer.c  uart.c
bare-metal/include/: ipc.h  irq.h  kernel.h  kprintf.h  mem.h  mq.h  platform.h  scheduler.h  semaphore.h  timer.h  types.h  uart.h
bare-metal/kernel/: ipc.c  irq.c  kernel.c  kprintf.c  mem.c  mq.c  scheduler.c  semaphore.c
bare-metal/tests/: test_ipc.c  test_kprintf.c  test_mem.c  test_mq.c  test_scheduler.c  test_semaphore.c
include/: callback_mq.h  ipc.h  mem.h  memory_alloc.h  mq.h  net.h  rtos.h  rtos_kernel.h
src/: callback_mq.c  ipc.c  main.c  mem.c  memory_alloc.c  mq.c  net.c  rtos_kernel.c  rtos_semaphore.c
